@@ -362,7 +362,7 @@
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="TRUE"
-				DebugInformationFormat="4"
+				DebugInformationFormat="3"
 				CompileAs="0"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
@@ -371,6 +371,7 @@
 				AdditionalDependencies="pd.lib pthreadVC.lib stk_d.lib sndobj.lib"
 				OutputFile=".\pd-msvc\flext_ld.dll"
 				AdditionalLibraryDirectories="f:\prog\packs\pthreads;&quot;f:\prog\pd\pd-cvs\bin&quot;;F:\prog\audio\stk\lib;F:\prog\audio\sndobj\lib"
+				GenerateDebugInformation="TRUE"
 				OptimizeReferences="1"
 				ImportLibrary="./pd-msvc/flext_ld.lib"/>
 			<Tool
