@@ -1,21 +1,23 @@
-#N canvas 335 232 584 289 12;
-#X obj 253 92 hsl 128 15 0 1 0 0 empty empty empty 20 8 0 8 -261681
--1 -1 5800 1;
-#X obj 31 92 osc~ 440;
-#X obj 90 246 dac~;
-#X obj 126 92 osc~ 880;
-#X obj 100 173 signal1~;
+#N canvas 335 232 586 291 12;
+#X obj 250 121 hsl 128 15 0 1 0 0 empty empty empty 20 8 0 8 -261681
+-1 -1 0 1;
+#X obj 28 121 osc~ 440;
+#X obj 87 248 dac~;
+#X obj 123 121 osc~ 880;
+#X obj 97 175 signal1~;
 #X obj 16 8 cnv 15 550 40 empty empty signal1 10 22 0 24 -260818 -1
 0;
 #X text 175 28 http://www.parasitaere-kapazitaeten.net;
-#X text 345 109 control the mixing;
-#X text 169 208 adjust the volume;
-#X obj 100 207 *~ 0.5;
-#X text 28 73 source 1;
-#X text 128 72 source 2;
-#X obj 251 114 nbx 5 16 0 1 0 0 empty empty empty 0 -6 0 12 -261681
--1 -1 0.456693 256;
+#X text 342 138 control the mixing;
+#X text 166 210 adjust the volume;
+#X obj 97 209 *~ 0.5;
+#X text 25 102 source 1;
+#X text 125 101 source 2;
+#X obj 248 143 nbx 5 16 0 1 0 0 empty empty empty 0 -6 0 12 -261681
+-1 -1 0 256;
 #X text 175 8 flext tutorial \, (C)2002 \, 2003 Thomas Grill;
+#X text 21 51 this is a port of IOhannes Zmoelnigs pan~ example;
+#X text 21 66 done by Frank Barknecht;
 #X connect 0 0 12 0;
 #X connect 1 0 4 0;
 #X connect 3 0 4 1;
