@@ -21,6 +21,8 @@ Version history:
 - added flext_base::DumpAttrib to send an attribute value to the attribute outlet
 - added "getmethods" message (for attribute-enabled externals) to list methods for a specified inlet (default = 0)
 - "getattributes" or "getmethods" output lists are now alphabethically sorted
+- flext::StopThread function to terminate running threads (started with LaunchThread)
+- added flext::post() and flext::error() console printing (thread-safe)
 
 0.4.4:
 - fixed deadly bug for Max/MSP method-to-symbol-binding proxies
